changed ship steering control

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Raptor</title>
   </head>
   <body>
-    <canvas id="myCanvas"></canvas>
+    <canvas id="main"></canvas>
     <script src="js/constants.js"></script>
     <script src="js/vector.js"></script>
     <script src="js/frame.js"></script>
