--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
   </head>
   <body>
     <canvas id="main"></canvas>
-    <script src="js/constants.js"></script>
+    <script src="js/settings.js"></script>
     <script src="js/vector.js"></script>
     <script src="js/frame.js"></script>
-    <script src="js/progressbar.js"></script>
-    <script src="js/stats.js"></script>
+    <script src="js/bar.js"></script>
+    <script src="js/score_board.js"></script>
     <script src="js/utils.js"></script>
-    <script src="js/ship.js"></script>
-    <script src="js/bubble.js"></script>
+    <script src="js/vehicle.js"></script>
+    <script src="js/aircraft.js"></script>
+    <script src="js/seacraft.js"></script>
+    <script src="js/building.js"></script>
+    <script src="js/fighter.js"></script>
+    <script src="js/chopper.js"></script>
+    <script src="js/boat.js"></script>
+    <script src="js/warship.js"></script>
+    <script src="js/raptor.js"></script>
+    <script src="js/weapon.js"></script>
     <script src="js/bullet.js"></script>
     <script src="js/rocket.js"></script>
+    <script src="js/level.js"></script>
     <script src="js/canvas.js"></script>
   </body>
 </html>
