--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <script src="js/bullet.js"></script>
     <script src="js/rocket.js"></script>
     <script src="js/level.js"></script>
+    <script src="js/wave.js"></script>
+    <script src="js/item.js"></script>
     <script src="js/canvas.js"></script>
   </body>
 </html>
